styles.css
@import url('https://fonts.googleapis.com/css2?family=Koulen&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Koulen&display=swap');

* {
    box-sizing: border-box; /* Proper box sizing, 200px width is 200px w/ including padding/margin */
    font-family: 'Koulen', cursive; /* Only want for h1? */
    color: #777;
    font-size: 18px;
}

html, body {
    margin: 0;  /* No margin or padding around html and body elements */
    padding: 0;
}

.nav ul {
    margin: 0;  /* No margin around nav ul, would have white space without */
}

.nav li {
    display: inline;    /* Top navigation elements are in a single line */
}

.nav a {
    display: inline-block;  /* Allows addition of padding on top/bottom */
    padding: .5em;
    color: white;
    text-decoration: none;
}

.main-nav {
    text-align: center;
    font-size: 1.45em;
    border-bottom: 1px solid rgba(255, 255, 255, .3);
}

.main-nav li {
    padding: 0 5%;  /* Add padding to top navigation li elements */
}

.nav a:hover {
    background-color: rgba(134, 54, 199, .7);
}

.main-header {
    background-color: rgba(63, 6, 110, 1);
    padding-bottom: 8px;
}

.nav-page {
    text-align: center;
    margin: 0;
    font-size: 5em;
    font-weight: normal;    /* Remove h1 bold */
    color: black;
}

.content-section {
    margin: 1em;
}

.container {
    max-width: 900px;
    margin: 0 auto; /* Centers text */
    padding: 1em 3em;
}

.section-header {
    font-family: 'Josefin Sans', sans-serif;
    color: #333;
    font-size: 2.5em;
    text-decoration: underline;
    margin-top: 15px;
    margin-bottom: 0px;
}

.no-list-deco {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.no-list-deco img {
    margin-right: 2px;
}

.left-game-image {
    float: left;
    width: 200px;
    margin: 15px;
    border-radius: 10%;
}

.right-game-image {
    float: right;
    width: 200px;
    margin: 15px;
    border-radius: 10%;
}

.main-footer {
    background-color: rgba(63, 6, 110, 1);
    padding: .25em 0;
}

.main-footer-container {
    display: flex;
    align-items: center;
}

.main-footer-container ul {
    flex-grow: 1;
    text-align: end;
}

.footer-nav li {
    padding: 0 .5em;    /* Spacing between footer nav icons */
}

.footer-nav img{    
    width: 80px;
}

.genre ul {
    margin-bottom: 0;
    margin-top: 0;
    text-align: center;
}

.genre li {
    color: white;
    text-decoration: none;
    display: inline;
    padding: 0 1em;
}

